section1 with photo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
         </div>
     </div>
 </header>
+
+<section class="p-4">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+
+                <img src="21.jpg" alt="" class="img-fluid rounded-circle">
+
+            </div>
+            <div class="col-md-6">
+
+                <h4><b>“Winning doesn’t always mean being first. Winning means you’re doing better than you’ve done before.”</b></h4>
+
+                  <p><b>'Aneesh Abdul Kareem'</b></p>
+                  <footer>Python Developer & Web Desiner</footer>
+                  
+            </div>
+        </div>
+    </div>
+</section>
     
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
