--- a/index.html
+++ b/index.html
@@ -100,6 +100,44 @@
         </div>
     </div>
 </section>
+
+
+<section class="bg-white p-3">
+    <div class="container">
+        <h1 class="text-center"><b>Experince</b></h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card text-center p-3" style="width: 18rem;">
+                    <i class="fab fa-python display-1 text-info"></i>
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Python</b></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card text-center p-3" style="width: 18rem;">
+                    <i class="fab fa-java display-1 text-info"></i>
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Java</b></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card text-center p-3" style="width: 18rem;">
+                    <i class="fab fa-weebly display-1 text-info"></i>
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Web Designer</b></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
