--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="text-center"><b>Skills</b></h1>
         <div class="row">
             <div class="col-md-4">
-                <div class="card text-center p-3" style="width: 18rem;">
+                <div class="card text-center p-3">
                     <i class="fas fa-business-time display-1 text-info"></i>
                     <div class="card-body">
                         <h5 class="card-title"><b>Marketing</b></h5>
@@ -79,9 +79,9 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card text-center p-3" style="width: 18rem;">
+                <div class="card text-center p-3">
                     <i class="fas fa-address-book display-1 text-info"></i>
-                    <div class="card-body">
+                     <div class="card-body">
                         <h5 class="card-title"><b>Communication</b></h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card text-center p-3" style="width: 18rem;">
+                <div class="card text-center p-3">
                     <i class="fab fa-angrycreative display-1 text-info"></i>
                     <div class="card-body">
                         <h5 class="card-title"><b>Creation</b></h5>
@@ -107,7 +107,7 @@
         <h1 class="text-center"><b>Experince</b></h1>
         <div class="row">
             <div class="col-md-4">
-                <div class="card text-center p-3" style="width: 18rem;">
+                <div class="card text-center p-3">
                     <i class="fab fa-python display-1 text-info"></i>
                     <div class="card-body">
                         <h5 class="card-title"><b>Python</b></h5>
@@ -117,7 +117,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card text-center p-3" style="width: 18rem;">
+                <div class="card text-center p-3">
                     <i class="fab fa-java display-1 text-info"></i>
                     <div class="card-body">
                         <h5 class="card-title"><b>Java</b></h5>
@@ -127,7 +127,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card text-center p-3" style="width: 18rem;">
+                <div class="card text-center p-3">
                     <i class="fab fa-weebly display-1 text-info"></i>
                     <div class="card-body">
                         <h5 class="card-title"><b>Web Designer</b></h5>
@@ -135,6 +135,40 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-light p-3">
+        <h1 class="text-center"><b>Contact me</b></h1>
+        <div class="row">
+            <div class="col-md-12">
+            
+            <form>
+                <div class="form-group text-center ">
+                  <label for="exampleInputEmail1">Email address</label>
+                  <input type="email" class="form-control text-center" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group text-center">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control text-center" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-group text-center">
+                    <label for="exampleInputMobileNumber">Mobile</label>
+                    <input type="tel" class="form-control text-center" id="exampleInputMobileNumber" placeholder="Mobile number">
+                  </div>
+                <div class="form-check text-center">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+               <div class="form-group text-center">
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
+               </div>
+              </form>
+            </div>
+
         </div>
     </div>
 </section>
