--- a/experince.html
+++ b/experince.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Experince</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
@@ -26,7 +26,7 @@
                        
                       <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                          <a class="nav-link text-white" href="#home-section">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link text-white" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item"> 
                                <a class="nav-link text-white" href="skills.html">Skills</a>   
